2001-10-04  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winnt.h: Add PF_* defines.
	Thanks to: "Wizord"  <wizord@argoslabs.com>

2001-09-18  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winnt.h (_[U]LARGE_INTEGER): Mark nameless structure
	field as _ANONYMOUS_STRUCT.
	* include/setupapi.h (SP_DEVINSTALL_PARAMS): Add missing typedef
	for UNICODE.
	* include/ipexport.h (icmp_echo_reply): Remove extra ';'.
	* lib/makefile.in: Add -pedantic switch to TEST_OPTIONS for header
	test.
 
2001-09-17  Mattia Barbon  <mbarbon@dsi.unive.it>

	* include/commctrl.h: Add some ListView constants.

2001-09-17  Earnie Boyd  <earnie@sf.net>

	* lib/Makefile.in (inst_includedir): Add FIXME and remove the usr/
	portion of the directory from the install.
	(inst_libdir): Ditto.
	* Makefile.in (VERSION): Increment.
	* include/w32api.h: Increment version.

2001-09-13  Earnie Boyd  <earnie@SF.net>

	* lib/Makefile.in (inst_includedir): Change to always use w32api
	subdirectory for target == cygwin.
	(inst_libdir): Ditto.

2001-09-13  Earnie Boyd  <earnie@SF.net>

	* lib/Makefile.in (config_prefix): New variable.
	(inst_includedir): Manipulate special value only if target == cygwin
	and build == target and prefix != config_prefix.
	(inst_libdir): Ditto.

2001-09-12  Earnie Boyd  <earnie@SF.net>

	* Makefile.in (TARFLAGS): New variable.
	(TARFILEEXT): Ditto.

2001-09-12  Earnie Boyd  <earnie@SF.net>

	* Makefile.in: Increment version.
	* include/w32api.h: Ditto.
	* lib/Makefile.in: Add usr/ to install directory special for cygwin.

2001-09-11  Danny Smith  <dannysmith@users.sourceforge.net>

 	* include/winnt.h (_[U]LARGE_INTEGER): Protect nameless struct with
	!defined(NONAMELESSUNION), rather than defined(_ANONYMOUS_STRUCT).
	(_REPARSE_DATA_BUFFER): Name union field DUMMYUNIONNAME.

2001-09-05  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/wininet.h (InternetAutodial): Add prototype. 
	(InternetAutodialHangup): Ditto.
	(InternetDial): Ditto.