@@ -1,3 +1,8 @@
+2001-10-12  Pedro A Aranda  <paaguti@hotmail.com>
+
+	* include/winuser.h (POINTSTOPOINT): Use explicit casts
+	before extracting words.
+
 2001-10-04  Danny Smith  <dannysmith@users.sourceforge.net>
 
 	* include/winnt.h: Add PF_* defines.
